force-app/main/default/objects/FundingOpportunity/fields/Funder__c.field-meta.xml
<CustomField>
    <fullName>Funder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funder</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Funding Opportunities</relationshipLabel>
    <relationshipName>Funding_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>