force-app/main/default/objects/FundingOpportunity/fields/Initial_Form_Id__c.field-meta.xml
<CustomField>
    <fullName>Initial_Form_Id__c</fullName>
    <label>Initial Form Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>