force-app/main/default/objects/FundingOpportunity/fields/Number_of_Awards__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Awards__c</fullName>
    <label>Number of Awards</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>