force-app/main/default/objects/FundingOpportunity/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field denotes the incoming grant opportunity and links it to its corresponding funding opportunity.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Funding Opportunities</relationshipLabel>
    <relationshipName>Funding_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>