force-app/main/default/objects/FundingOpportunity/fields/Remaining_Fund__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Fund__c</fullName>
    <label>Remaining Fund After Disbursement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>