force-app/main/default/objects/FundingOpportunity/fields/Remaining_Grant_Amount__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Grant_Amount__c</fullName>
    <formula>Total_Grant_Amount__c  -  Total_Allocated_Subgrant_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Grant Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>