force-app/main/default/objects/FundingOpportunity/fields/Submittable_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Submittable_Project_Id__c</fullName>
    <label>Submittable Project Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>