force-app/main/default/objects/FundingOpportunity/fields/Submittable_Project_URL__c.field-meta.xml
<CustomField>
    <fullName>Submittable_Project_URL__c</fullName>
    <formula>IF(
  ISBLANK(Submittable_Project_Id__c),
  &quot;&quot;,
  HYPERLINK(
    &quot;https://nationalmainstreetcenter.submittable.com/submit/&quot; &amp; Submittable_Project_Id__c &amp; &quot;/kloudserv-api-check-test-project&quot;,
    &quot;Submittable Project URL&quot;,
    &quot;_blank&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submittable Project URL</label>
    <type>Text</type>
</CustomField>