force-app/main/default/objects/FundingOpportunity/fields/Total_Allocated_Subgrant_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Allocated_Subgrant_Amount__c</fullName>
    <label>Total Allocated Subgrant Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>