force-app/main/default/objects/FundingOpportunity/fields/Total_Award_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Award_Amount__c</fullName>
    <label>Total Award Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>