force-app/main/default/objects/FundingOpportunity/fields/Total_Grant_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Grant_Amount__c</fullName>
    <formula>BudgetTemplate.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Grant Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>