force-app/main/default/objects/FundingOpportunity/listViews/Submittable_Projects.listView-meta.xml
<ListView>
    <fullName>Submittable_Projects</fullName>
    <columns>Name</columns>
    <columns>Is_Hidden__c</columns>
    <columns>StartDate</columns>
    <columns>EndDate</columns>
    <columns>ApplicationInstructions</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Submittable_Project_Id__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Submittable Projects</label>
</ListView>